# numericLib

./: .gitignore  CMakeLists.txt
arrays/: arrayND.h  matrix1D.h  matrix2D.h
linearSystems/: choleskyDecomposition.h  jacobi.h  luSolvers.h
matrixOperations/: CMakeLists.txt  sanityCheck.cpp
utils/: concepts.h  header.h  helpers.h  tester.h  timer.h
